# Tinker-hello-world-notebooks

./: .env.example  .gitattributes  .gitignore  README.md  pyproject.toml  requirements-full.txt  requirements.txt  test_env.py
data/basketball_distillation/: scouting_examples.jsonl
data/piglatin/: sample.jsonl
notebooks/: 00_check_env.ipynb  01_tinker_hello_LoRA_world.ipynb  02_basketball_prompt_distillation.ipynb  03_tinker_hello_LoRA_piglatin_wandb.ipynb  04_piglatin_multimodel_benchmark_wandb.ipynb  v0_02_basketball_prompt_distillation.ipynb
scripts/: build_piglatin_dataset.py
src/tinker_hw.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/tinker_hw/utils/: io.py
